# AI-Ransomware-Assistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package.json  pyproject.toml  render.yaml  requirements-cai.txt  requirements-dev.txt  requirements-legacy.txt  requirements.txt  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh  start.bat  start.sh  start_public.bat  start_public.sh
backend/: __init__.py  action_plan_llm.py  adaptive.py  ai_trace.py  cai_adapter.py  chat_interview.py  confidence.py  config.py  dialog_contracts.py  dialog_graph.py  dialog_intent.py  dialog_policy.py  exposure.py  findings.py  hygiene.py  llm_client.py  llm_contracts.py  main.py  prompt_firewall.py  questions.py  recovery_adapters.py  recovery_exports.py  recovery_imports.py  recovery_proof.py  redaction.py  report.py  scoring.py  security.py  security_agent.py  serve.py  skills.py  storage.py
data/: assessment_methodology.json  demo_profiles.json  domain_metadata.json  employee_security_hygiene_checklist.json  external_exposure_checklist.json  questions.json  recovery_controls.json  scoring_rationale.json  scoring_rules.json  source_notes.json  source_registry.json  threat_overlay_notes.json
docs/: DEMO_SCRIPT_ET.md  TECHNICAL_EXPLANATION_ET.md  render-deploy.md
frontend/: app.py
frontend-web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
prompts/: action_plan_prompt.txt  advisor_prompt.txt  chat_turn_prompt.txt  (+6 more)
(+114 files in other folders)
