[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ransomware-readiness-assistant"
version = "0.2.0"
description = "FastAPI ransomware-readiness assistant with deterministic scoring and optional LLM advisory flows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "langgraph",
  "openai==1.54.3",
  "pydantic==2.9.2",
  "requests==2.32.3",
  "uvicorn==0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.7.3",
]
legacy = [
  "streamlit==1.39.0",
  "pandas==2.2.3",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
